Upgrade to Loom 18b5, adjustments
- Upgrade to Gradle 7.3
- Remove JUnit as it breaks under target 18
- Use targetVer parameter to enable target 18 under command line
(Eclipse breaks above target 16 atm)
- Remove scheduler overloads, rely on the user providing the proper
virtual executor
- Remove closing the executor upon cleanup as it deadlocks